Added tests for null, empty, fake paths. Fixed access to file on using method getResources